--- a/index.html
+++ b/index.html
@@ -33,44 +33,44 @@
     <li>
       分类
       <ul>
-        <li><a href="#/Architect/README">超级架构师</a></li>
-        <li><a href="#/SalaryIncrease/README">涨薪秘籍</a></li>
-        <li><a href="#/Java/README">Java</a></li>
-        <li><a href="#/Os/README">操作系统</a></li>
-        <li><a href="#/Network/README">网络</a></li>
-        <li><a href="#/Algorithm/README">算法</a></li>
-        <li><a href="#/Database/README">数据库</a></li>
-        <li><a href="#/UML/README">UML</a></li>
-        <li><a href="#/Architecture/README">架构设计</a></li>
-        <li><a href="#/DesignPattern/README">设计模式</a></li>
-        <li><a href="#/Skill/README">实用技巧</a></li>
-        <li><a href="#/Specification/README">开发规范</a></li>
-        <li><a href="#/Middleware/README">中间件</a></li>
+        <li><a href="./Cesium/README.md">Cesium</a></li>
+        <li><a href="./GIS/README.md">GIS</a></li>
+        <li><a href="./Java/README.md">Java</a></li>
+        <li><a href="./JS/README.md">JavaScript</a></li>
+<!--        <li><a href="#/Network/README">网络</a></li>-->
+<!--        <li><a href="#/Algorithm/README">算法</a></li>-->
+<!--        <li><a href="#/Database/README">数据库</a></li>-->
+<!--        <li><a href="#/UML/README">UML</a></li>-->
+<!--        <li><a href="#/Architecture/README">架构设计</a></li>-->
+<!--        <li><a href="#/DesignPattern/README">设计模式</a></li>-->
+<!--        <li><a href="#/Skill/README">实用技巧</a></li>-->
+<!--        <li><a href="#/Specification/README">开发规范</a></li>-->
+<!--        <li><a href="#/Middleware/README">中间件</a></li>-->
       </ul>
     </li>
     <li>
       超级架构师
       <ul>
-        <li><a href="#/Architect/数据库模式">数据库模式</a></li>
-        <li><a href="#/Architect/DevOps初学指南">DevOps初学指南</a></li>
-        <li><a href="#/Architect/架构师定义、职业素质和应具备的能力">架构师定义、职业素质和应具备的能力</a></li>
+<!--        <li><a href="#/Architect/数据库模式">数据库模式</a></li>-->
+<!--        <li><a href="#/Architect/DevOps初学指南">DevOps初学指南</a></li>-->
+<!--        <li><a href="#/Architect/架构师定义、职业素质和应具备的能力">架构师定义、职业素质和应具备的能力</a></li>-->
       </ul>
     </li>
     <li>
       涨薪秘籍
       <ul>
-        <li><a href="#/SalaryIncrease/1.5W字长文讲解分布式系统">1.5W字长文讲解分布式系统</a></li>
-        <li><a href="#/SalaryIncrease/阿里巴巴10个顶级开源项目">阿里巴巴10个顶级开源项目</a></li>
+<!--        <li><a href="#/SalaryIncrease/1.5W字长文讲解分布式系统">1.5W字长文讲解分布式系统</a></li>-->
+<!--        <li><a href="#/SalaryIncrease/阿里巴巴10个顶级开源项目">阿里巴巴10个顶级开源项目</a></li>-->
       </ul>
     </li>
     <li>
       精品文章
       <ul>
-        <li><a href="#/Architecture/DDD/DDD系列第一讲：Domain-Primitive">DDD系列第一讲：Domain-Primitive</a></li>
-        <li><a href="#/Skill/如何用docsify改造你的Github-Pages">如何用docsify改造你的Github-Pages</a></li>
-        <li><a href="#/Java/SpringBoot/mica-auto">SpringBoot Starter开发利器：mica-auto</a></li>
-        <li><a href="#/Java/Java线程池源码解析">Java线程池源码解析</a></li>
-        <li><a href="#/Java/如何撸一个mini线程池">如何撸一个mini线程池</a></li>
+<!--        <li><a href="#/Architecture/DDD/DDD系列第一讲：Domain-Primitive">DDD系列第一讲：Domain-Primitive</a></li>-->
+<!--        <li><a href="#/Skill/如何用docsify改造你的Github-Pages">如何用docsify改造你的Github-Pages</a></li>-->
+<!--        <li><a href="#/Java/SpringBoot/mica-auto">SpringBoot Starter开发利器：mica-auto</a></li>-->
+<!--        <li><a href="#/Java/Java线程池源码解析">Java线程池源码解析</a></li>-->
+<!--        <li><a href="#/Java/如何撸一个mini线程池">如何撸一个mini线程池</a></li>-->
       </ul>
     </li>
   </ul>
@@ -78,8 +78,8 @@
 <div id="app"></div>
 <script>
   window.$docsify = {
-    name: 'JAVA3C',
-    repo: 'https://github.com/rameosu/java3c',
+    name: '纸飞机的旅行的资源库',
+    repo: 'https://github.com/Jinhe404/Blogs',
     auto2top: true,
     coverpage: true,
     loadSidebar: true,
