--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <li>
       分类
       <ul>
-        <li><a href="./Cesium/README.md">Cesium</a></li>
+        <li><a href="#/Cesium/README.md">Cesium</a></li>
         <li><a href="./GIS/README.md">GIS</a></li>
         <li><a href="./Java/README.md">Java</a></li>
         <li><a href="./JS/README.md">JavaScript</a></li>
@@ -169,7 +169,7 @@
           // `;
           const subscription = `
                         <h2>🎁 福利</h2>
-                        微信搜索公众号 ⭐ <b style="color: red">程序员有意思</b> ⭐ 或者扫描下面的二维码关注，即可获得最新、最全、最实用的学习资料。
+                        微信搜索公众号 ⭐ <b style="color: red">GIS世界</b> ⭐ 或者扫描下面的二维码关注，即可获得最新、最全、最实用的学习资料。
                         </br>
                         <img src="./assets/rameo/dynamic-code.png"><br>
                     `;
@@ -178,7 +178,7 @@
         hook.afterEach(function (html) {
           const footer = [
             "<footer style='text-align: center;'>",
-            '<span>Copyright © 2021-2024 <a href="https://github.com/rameosu/java3c" target="_blank">Java3C</a>. All rights reserved.',
+            '<span>Copyright © 2021-2024 <a href="https://github.com/Jinhe404/Blogs" target="_blank">Java3C</a>. All rights reserved.',
             "</footer>",
           ].join("");
           return html + footer;
