--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       分类
       <ul>
         <li><a href="#/Cesium/README.md">Cesium</a></li>
-        <li><a href="./GIS/README.md">GIS</a></li>
-        <li><a href="./Java/README.md">Java</a></li>
-        <li><a href="./JS/README.md">JavaScript</a></li>
+        <li><a href="#/GIS/README.md">GIS</a></li>
+        <li><a href="#/Java/README.md">Java</a></li>
+        <li><a href="#/JS/README.md">JavaScript</a></li>
 <!--        <li><a href="#/Network/README">网络</a></li>-->
 <!--        <li><a href="#/Algorithm/README">算法</a></li>-->
 <!--        <li><a href="#/Database/README">数据库</a></li>-->
@@ -132,7 +132,7 @@
                     .replace(/\/main/, "/blob/main");
           } else {
             url =
-                    "https://github.com/rameosu/java3c/tree/main/docs/" +
+                    "https://github.com/Jinhe404/Blogs" +
                     vm.route.file;
           }
           const github = `[GitHub](${url})`;
@@ -171,14 +171,14 @@
                         <h2>🎁 福利</h2>
                         微信搜索公众号 ⭐ <b style="color: red">GIS世界</b> ⭐ 或者扫描下面的二维码关注，即可获得最新、最全、最实用的学习资料。
                         </br>
-                        <img src="./assets/rameo/dynamic-code.png"><br>
+                        <img src="./assert/cgnb/gzh.jpg"><br>
                     `;
           return editHtml + content + `<br>` + subscription;
         });
         hook.afterEach(function (html) {
           const footer = [
             "<footer style='text-align: center;'>",
-            '<span>Copyright © 2021-2024 <a href="https://github.com/Jinhe404/Blogs" target="_blank">Java3C</a>. All rights reserved.',
+            '<span>Copyright © 2021-2024 <a href="https://github.com/Jinhe404/Blogs" target="_blank">纸飞机的旅行</a>. All rights reserved.',
             "</footer>",
           ].join("");
           return html + footer;
