--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       页面
       <ul>
         <li><a href="#">封面</a></li>
-        <li><a href="README.md">首页</a></li>
+        <li><a href="#/README.md">首页</a></li>
       </ul>
     </li>
     <li>
