--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="#/JS/README.md">JavaScript</a></li>
 <!--        <li><a href="#/Network/README">网络</a></li>-->
 <!--        <li><a href="#/Algorithm/README">算法</a></li>-->
-<!--        <li><a href="#/Database/README">数据库</a></li>-->
+        <li><a href="#/DeepLearning/README.md">深度学习</a></li>
 <!--        <li><a href="#/UML/README">UML</a></li>-->
 <!--        <li><a href="#/Architecture/README">架构设计</a></li>-->
 <!--        <li><a href="#/DesignPattern/README">设计模式</a></li>-->
@@ -78,7 +78,7 @@
 <div id="app"></div>
 <script>
   window.$docsify = {
-    name: '纸飞机的旅行的资源库',
+    name: '纸飞机的旅行',
     repo: 'https://github.com/Jinhe404/Blogs',
     auto2top: true,
     coverpage: true,
